Настроена авторизация через аннотацию. У Админа есть доступ к странице админа.